update about me

--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>About Me</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									<p>I'm tryin to find a job.</p>
 								</div>
 							</div>
 						</section>
@@ -62,17 +59,29 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Please take a look at just a few examples of my hard work!</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Bebop Blog</h3>
-									<p>Website to where </p>
+									<p>SpringBoot application built using the Java Programming language and ThymeLeaf templating engine, utilizes all CRUD functions. Built for Cowboy Bebop fans to blog about all things Bebop.</p>
+									<ul class="actions">
+										<li><a href="" class="button">Try it out!</a></li>
+									</ul>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
+							
+							<div class="features">
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>RPS Arena</h3>
+									<p>Rock, Paper, Scissors game built using HTML, CSS, JavaScript and BootStrap. Face off against the computer in this simple yet classic version of Rock, Paper, Scissors</p>
+									<ul class="actions">
+										<li><a href="https://jared8cortez.github.io/RPS_Game/" target="_blank" class="button">Try it out!</a></li>
+									</ul>
+								</section>
+							</div>
+							
 						</div>
 					</section>
 
