--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
+	
 	<head>
 		<title>Jared's Portfoli</title>
 		<meta charset="utf-8" />
@@ -12,6 +9,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	
 	<body class="is-preload">
 
 		<!-- Sidebar -->
@@ -71,7 +69,7 @@
 									</section>
 								</div>
 								
-								<div class="features">
+								<!-- <div class="features">
 									<section>
 										<span class="icon solid major fa-code"></span>
 										<h3>Bebop Blog</h3>
@@ -80,7 +78,7 @@
 											<li><a href="" class="button">Try it out!</a></li>
 										</ul>
 									</section>
-								</div>
+								</div> -->
 							
 						</div>
 					</section>
