--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 									</section>
 								</div>
 								
-								<!-- <div class="features">
+								<div class="features">
 									<section>
 										<span class="icon solid major fa-code"></span>
-										<h3>Bebop Blog</h3>
-										<p>SpringBoot application built using the Java Programming language and ThymeLeaf templating engine, utilizes all CRUD functions. Built for Cowboy Bebop fans to blog about all things Bebop.</p>
+										<h3>Retro Snake Game</h3>
+										<p> Simple snake game built using some custom HTML.</p>
 										<ul class="actions">
-											<li><a href="" class="button">Try it out!</a></li>
+											<li><a href="https://jared8cortez.github.io/Snake/" class="button">Try it out!</a></li>
 										</ul>
 									</section>
-								</div> -->
+								</div>
 							
 						</div>
 					</section>
