open Snake in new tab

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<h3>Retro Snake Game</h3>
 										<p> Simple snake game built using some custom HTML.</p>
 										<ul class="actions">
-											<li><a href="https://jared8cortez.github.io/Snake/" class="button">Try it out!</a></li>
+											<li><a href="https://jared8cortez.github.io/Snake/" target="_blank" class="button">Try it out!</a></li>
 										</ul>
 									</section>
 								</div>
