--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<section>
 										<span class="icon solid major fa-code"></span>
 										<h3>Retro Snake Game</h3>
-										<p> Simple snake game built using some custom HTML.</p>
+										<p> Simple snake game built using some custom HTML. (Desktop only)</p>
 										<ul class="actions">
 											<li><a href="https://jared8cortez.github.io/Snake/" target="_blank" class="button">Try it out!</a></li>
 										</ul>
