--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/meatarboretum.jpg" alt=""
+				<a href="#" class="image"><img src="images/me.jpg" alt=""
 						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
