--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/me.jpg" alt=""
+				<a href="#" class="image"><img src="images/jared_cortez.jpg" alt=""
 						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
@@ -61,7 +61,7 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>Projects</h2>
-				<p>Please take a look at just a few examples of my hard work!</p>
+				<p>While you're here, take some time to check out a few of my projects below!</p>
 				<div class="features">
 					<section>
 						<span class="icon solid major fa-code"></span>
@@ -79,7 +79,7 @@
 					<section>
 						<span class="icon solid major fa-code"></span>
 						<h3>Retro Snake Game</h3>
-						<p> Simple snake game built using some custom HTML. (Desktop only)</p>
+						<p> Simple snake game built using some custom HTML. (Desktop/Laptop only)</p>
 						<ul class="actions">
 							<li><a href="https://jared8cortez.github.io/Snake/" target="_blank" class="button">Try it
 									out!</a></li>
