--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/jared_cortez.jpg" alt=""
-						data-position="center center" /></a>
+				<a href="#" class="image"><img src="images/jared_cortez.jpg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>About Me</h2>
-						<p>I'm passionate about all thnigs I do, Most of my time is spent learning new technologies to
-							apply to any business or personal needs. Highly motivated individual who values team work
-							and education as the key factors for success.</p>
+						<h2>Jared Cortez - Full Stack Software Developer</h2>
+							<p>
+								I'm passionate about all thnigs I do, Most of my time is spent learning new technologies to
+								apply to any business or personal needs. Highly motivated individual who values team work
+								and education as the key factors for success. In my spare time I enjoy designing and
+								building small micro games using the Unity cross-platform game engine
+							</p>
 					</div>
 				</div>
 			</section>
@@ -66,8 +68,10 @@
 					<section>
 						<span class="icon solid major fa-code"></span>
 						<h3>RPS Arena</h3>
-						<p>Rock, Paper, Scissors game built using HTML, CSS, JavaScript and BootStrap. Face off against
-							the computer in this simple yet classic version of Rock, Paper, Scissors</p>
+							<p>
+								Rock, Paper, Scissors game built using HTML, CSS, JavaScript and BootStrap. Face off against
+								the computer in this simple yet classic version of Rock, Paper, Scissors
+							</p>
 						<ul class="actions">
 							<li><a href="https://jared8cortez.github.io/RPS_Game/" target="_blank" class="button">Try it
 									out!</a></li>
