--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/jared_cortez.jpg" alt="" data-position="center center" /></a>
+				<a href="#" class="image"><img src="images/jared_cortez.jpg" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Jared Cortez - Full Stack Software Developer</h2>
-							<p>
-								I'm passionate about all thnigs I do, Most of my time is spent learning new technologies to
-								apply to any business or personal needs. Highly motivated individual who values team work
-								and education as the key factors for success. In my spare time I enjoy designing and
-								building small micro games using the Unity cross-platform game engine
-							</p>
+						<p>
+							I'm passionate about all thnigs I do, Most of my time is spent learning new technologies to
+							apply to any business or personal needs. Highly motivated individual who values team work
+							and education as the key factors for success. In my spare time I enjoy designing and
+							building small micro games using the Unity cross-platform game engine
+						</p>
 					</div>
 				</div>
 			</section>
@@ -66,12 +66,13 @@
 				<p>While you're here, take some time to check out a few of my projects below!</p>
 				<div class="features">
 					<section>
+
 						<span class="icon solid major fa-code"></span>
 						<h3>RPS Arena</h3>
-							<p>
-								Rock, Paper, Scissors game built using HTML, CSS, JavaScript and BootStrap. Face off against
-								the computer in this simple yet classic version of Rock, Paper, Scissors
-							</p>
+						<p>
+							Enter the Hyrule RPS arena and battle against
+							the computer in this simple yet classic version of Rock, Paper, Scissors.
+						</p>
 						<ul class="actions">
 							<li><a href="https://jared8cortez.github.io/RPS_Game/" target="_blank" class="button">Try it
 									out!</a></li>
@@ -81,6 +82,7 @@
 
 				<div class="features">
 					<section>
+
 						<span class="icon solid major fa-code"></span>
 						<h3>Retro Snake Game</h3>
 						<p> Simple snake game built using some custom HTML. (Desktop/Laptop only)</p>
@@ -90,7 +92,6 @@
 						</ul>
 					</section>
 				</div>
-
 			</div>
 		</section>
 
@@ -116,6 +117,8 @@
 									</li>
 									<li><a href="https://github.com/jared8cortez" target="_blank"
 											class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/JaredCortez8" target="_blank"
+											class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								</ul>
 							</li>
 						</ul>
