--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
 				<a href="#" class="image"><img src="images/jared_cortez.jpg" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Jared Cortez - Full Stack Software Developer</h2>
+						<h2><strong> Jared Cortez - Full Stack Software Developer </strong></h2>
 						<p>
-							I'm passionate about all thnigs I do, Most of my time is spent learning new technologies to
-							apply to any business or personal needs. Highly motivated individual who values team work
-							and education as the key factors for success. In my spare time I enjoy designing and
-							building small micro games using the Unity cross-platform game engine
+							Most of my time is spent researching new ways to stay ahead, as a developer you must always be ahead of the curve when it comes to new technologies.
+							On my days off I enjoy designing and building small micro games using the Unity cross-platform game engine, or simply hanging out on Steam with friends.
 						</p>
 					</div>
 				</div>
