--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
 					<section>
 
 						<span class="icon solid major fa-code"></span>
+						<h3>Jared's First Person Shooter</h3>
+						<p>
+							This is my first micro-fps game to build in the Unity Game Engine. Can you kill all the evil bots? Save the friendly healing wizard bot?
+							Click the link below to go to my Unity Connect page to play my first game!! (Desktop/Laptop only)
+						</p>
+						<ul class="actions">
+							<li><a href="https://connect.unity.com/p/new-unity-project-3436" target="_blank" class="button">Try it
+									out!</a></li>
+						</ul>
+					</section>
+
+					<section>
+
+						<span class="icon solid major fa-code"></span>
 						<h3>RPS Arena</h3>
 						<p>
 							Enter the Hyrule RPS arena and battle against
