--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 									out!</a></li>
 						</ul>
 					</section>
+				</div>
 
+				<div class="features">
 					<section>
 
 						<span class="icon solid major fa-code"></span>
