--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 									out!</a></li>
 						</ul>
 					</section>
+				</div>
 
+				<div class="features">
 					<section>
 
 						<span class="icon solid major fa-code"></span>
@@ -129,8 +131,6 @@
 									</li>
 									<li><a href="https://github.com/jared8cortez" target="_blank"
 											class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://twitter.com/JaredCortez8" target="_blank"
-											class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								</ul>
 							</li>
 						</ul>
